--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "Pedro Teixeira <i@pgte.me>",
   "license": "MIT",
   "dependencies": {
-    "browserify": "^14.4.0",
+    "browserify": "^14.5.0",
     "http-server": "^0.10.0",
-    "ipfs": "^0.25.0",
-    "ipfs-pubsub-room": "^0.1.2"
+    "ipfs": "^0.26.0",
+    "ipfs-pubsub-room": "^0.4.0",
+    "prom-client": "^10.2.1"
   }
 }
